# Nexus_Orchestrator

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  SECURITY.md  design_document.md  orchestrator.toml  pyproject.toml
.github/workflows/: ci.yml  security.yml
constraints/: README.md
constraints/libraries/: README.md
constraints/registry/: 000_base_constraints.yaml
designs/: AI_System.md  Search.md
docker/: README.md  agent-sandbox.Dockerfile
docs/: BUILD_ORDER.md  FILE_MAP.md  GLOSSARY.md  REPO_BLUEPRINT.md  threat_model.md
docs/_generated/: repo_blueprint.json
docs/adrs/: 000_TEMPLATE.md  001-canonical-provider-interface.md  002-model-catalog-capabilities.md  003-merge-queue-statedb-source-of-truth.md
docs/architecture/: DATA_MODEL.md  GIT_PROTOCOL.md  OVERVIEW.md  VERIFICATION_PIPELINE.md
docs/prompts/: ROLE_SYSTEM.md
docs/prompts/templates/: ADVERSARIAL_TESTER.md  ARCHITECT.md  CONSTRAINT_MINER.md  DOCUMENTATION.md  IMPLEMENTER.md  INTEGRATOR.md  PERFORMANCE.md  REVIEWER.md  SECURITY.md  TOOLSMITH.md
docs/quality/: AUDIT.md  STYLE_AND_LINT.md
docs/runbooks/: LOCAL_USAGE.md  OPERATIONS.md
docs/schemas/: CONFIG.md  CONSTRAINT_REGISTRY.md  EVIDENCE_LEDGER.md  STATE_DB.md  config.schema.jsonc  constraint_registry.schema.jsonc  evidence_ledger.schema.jsonc  spec_map.schema.jsonc  task_graph.schema.jsonc
profiles/: README.md  operator_profile.toml
samples/: README.md
samples/specs/: minimal_design_doc.md
scripts/: README.md  audit_placeholders.py  cost_report.py  export_audit.py  gc_workspaces.py  migrate_db.py  placeholder_gate.py  repo_audit.py  secret_audit.sh  verify_evidence.py
src/: run_real_discovery.py
src/discovery/: __init__.py  artifacts.py  baselines.py  certification.py  data_gen.py  expr_tree.py  novelty.py  search.py
src/nexus_orchestrator/: __init__.py  __main__.py  constants.py  main.py  repo_blueprint.py
src/nexus_orchestrator/auth/: __init__.py  strategy.py
src/nexus_orchestrator/config/: __init__.py  loader.py  schema.py
src/nexus_orchestrator/control_plane/: __init__.py  budgets.py  controller.py  feedback.py  scheduler.py
src/nexus_orchestrator/domain/: __init__.py  events.py  ids.py  models.py
src/nexus_orchestrator/ext/: README.md
src/nexus_orchestrator/integration_plane/: __init__.py  conflict_resolution.py  git_engine.py  merge_queue.py  workspace_manager.py
src/nexus_orchestrator/knowledge_plane/: __init__.py  constraint_registry.py  evidence_ledger.py  failure_mining.py  indexer.py  personalization.py  retrieval.py
src/nexus_orchestrator/modes/: __init__.py  brownfield.py  exploration.py  greenfield.py  hardening.py
src/nexus_orchestrator/observability/: __init__.py  events.py  logging.py  metrics.py
src/nexus_orchestrator/persistence/: __init__.py  repositories.py  state_db.py
src/nexus_orchestrator/planning/: __init__.py  architect_interface.py  constraint_compiler.py  requirements_extractor.py  task_graph.py
src/nexus_orchestrator/quality/: __init__.py  placeholder_audit.py
src/nexus_orchestrator/sandbox/: __init__.py  network_policy.py  resource_governor.py  sandbox_manager.py  tool_provisioner.py
src/nexus_orchestrator/security/: __init__.py  prompt_hygiene.py  redaction.py
src/nexus_orchestrator/spec_ingestion/: __init__.py  ingestor.py  spec_map.py
src/nexus_orchestrator/synthesis_plane/: __init__.py  context_assembler.py  dispatch.py  model_catalog.json  model_catalog.py  prompt_templates.py  roles.py  spark_triage.py  tools.py  work_item_classifier.py
src/nexus_orchestrator/ui/: __init__.py  cli.py  crash_report.py  onboarding.py  render.py  tui.py  tui_app.py
src/nexus_orchestrator/utils/: __init__.py  concurrency.py  fs.py  hashing.py
src/nexus_orchestrator/verification_plane/: __init__.py  constraint_gate.py  evidence.py  pipeline.py
src/workstream_001/: __init__.py
src/workstream_002/: __init__.py
src/workstream_003/: __init__.py
src/workstream_004/: __init__.py
src/workstream_005/: __init__.py
tests/: README.md
tests/fixtures/: README.md  design_doc_explicit_nonstandard.md  design_doc_freeform.md  design_doc_goals_scope.md
tests/integration/: __init__.py  test_agent_roundtrip.py  test_cli_smoke.py  test_mode_plan_variants.py  test_spec_to_plan.py  test_verification_plane_build_checker_integration.py  test_verification_plane_evidence_io.py  test_workspace_lifecycle.py
tests/integration/synthesis_plane/: test_provider_adapters_optional_imports.py
tests/meta/: __init__.py  test_prompt1_contracts.py  test_repo_blueprint_contracts.py
tests/smoke/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_auth_strategy.py  test_crash_report.py  test_plan_dialog.py  test_run_after_plan.py  test_spark_triage.py  test_tool_adapter.py  test_tool_detection.py  test_tui_controller.py  test_tui_onboarding.py  test_tui_runner.py  test_tui_state.py  test_tui_widgets.py  test_work_item_classifier.py
tests/unit/config/: __init__.py  test_loader.py  test_schema.py
tests/unit/control_plane/: __init__.py  test_dispatch_routing.py  test_feedback.py  test_scheduler.py
tests/unit/domain/: __init__.py  test_events.py  test_ids.py  test_models.py  test_persistence_roundtrip.py
tests/unit/integration_plane/: __init__.py  test_git_engine.py  test_merge_queue.py
tests/unit/knowledge_plane/: __init__.py  test_constraint_registry.py  test_evidence_ledger.py  test_failure_mining.py  test_indexer.py  test_personalization.py  test_retrieval.py
tests/unit/modes/: test_modes.py
tests/unit/observability/: test_events.py  test_logging.py  test_metrics.py
tests/unit/persistence/: __init__.py  test_repositories.py  test_state_db.py  test_state_db_connect.py
tests/unit/planning/: __init__.py  (+3 more)
tools/: README.md  registry.toml
(+68 files in other folders)
