# pyproject.toml — Python project metadata & tool config (private-first)
#
# File: pyproject.toml
# Last updated: 2026-02-12
#
# Purpose
# - Define the orchestrator as a local, developer-run tool.
# - Centralize dependency groups and tool configuration for reproducible development.
#
# What should be included
# - Minimal core dependencies for the orchestrator runtime.
# - Optional extras for providers (OpenAI/Anthropic), sandboxing (docker), and UI (TUI).
# - Dev tooling: formatter, linter, type checker, test runner, coverage, security scanners.
# - Entry point for CLI (e.g., `nexus`).
#
# Functional requirements
# - Must support editable installs (`pip install -e .`) for rapid local iteration.
# - Must separate provider deps to allow running without vendor SDKs (mock mode).
#
# Non-functional requirements
# - Prefer fewer dependencies; this is a private tool, not a platform.
# - Pin or constrain versions to avoid silent breaking changes.
#
[project]
name = "nexus-orchestrator"
version = "0.1.0"
description = "Constraint-driven agentic LLM orchestrator — personal, local-first"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core runtime (minimal, deterministic)
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "PyYAML>=6.0.2,<7",
    "aiosqlite>=0.20,<1",
    "GitPython>=3.1.43,<4",
    "Jinja2>=3.1.4,<4",
    "structlog>=24.4,<25",
    "ulid-py>=1.1,<2",
]

[project.optional-dependencies]
providers = [
    "openai>=1.58,<2",            # OpenAI/Codex adapter
    "anthropic>=0.42,<1",         # Anthropic/Claude adapter
]
dev = [
    "ruff==0.14.14",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "hypothesis==6.151.6",
    "pytest-cov==6.3.0",
    "pytest-asyncio==1.3.0",
    "PyYAML==6.0.3",
    "pip-audit==2.10.0",
]
tui = [
    # "textual>=0.50",           # TUI framework
]

[project.scripts]
nexus = "nexus_orchestrator.main:cli_entrypoint"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/repo_audit.py" = ["E402"]
"tests/meta/test_repo_blueprint_contracts.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-config", "--strict-markers"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast unit tests",
    "integration: tests that require multiple components",
    "smoke: end-to-end smoke tests",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
